# ugc-video-analysis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
app/: __init__.py  config.py  main.py
app/core/: __init__.py  database.py  slack.py
app/handlers/: __init__.py  message_handler.py
app/models/: __init__.py  pending_approval.py  video_review.py
app/prompts/: comment_generation.py  video_review.py
app/repositories/: __init__.py  approval_repository.py
app/services/: __init__.py  comment_generation.py  slack_files.py  video_analysis.py
app/utils/: __init__.py  score_parser.py  slack_formatter.py
migrations/: env.py
migrations/versions/: 2026_02_05_30eef01f090a_create_pending_approvals_table.py  2026_02_12_1bc3bb0ceea5_remove_video_path_from_pending_approvals.py
